--- a/.github/workflows/simple-deploy.yml
+++ b/.github/workflows/simple-deploy.yml
@@ -1,4 +1,3 @@
-
 name: Simple-Deploy
 
 on:
@@ -7,8 +6,8 @@ on:
       - main
 
 jobs:
-  build:
-    name: Build
+  deploy:
+    name: Deploy
     runs-on: ubuntu-latest
     environment: production
 
@@ -41,3 +40,25 @@ jobs:
         docker build -t $ECR_REGISTRY/$LOWERCASE:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$LOWERCASE:$IMAGE_TAG
         echo "::set-output name=image::$ECR_REGISTRY/$LOWERCASE:$IMAGE_TAG"
+        
+    - name: Pull Image, Run Container
+      uses: appleboy/ssh-action@v0.1.4
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_DEFAULT_REGION: ap-northeast-2
+        TARGET_IMAGE: ${{ steps.build-image.outputs.image }}
+      with:
+        host: ${{ secrets.SSH_HOST }}
+        port: ${{ secrets.SSH_PORT }}
+        username: ${{ secrets.SSH_USERNAME }}
+        key: ${{ secrets.SSH_KEY }}
+        envs: AWS_ACCESS_KEY_ID,AWS_SECRET_ACCESS_KEY,AWS_DEFAULT_REGION,TARGET_IMAGE
+        script: |
+          export AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
+          export AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
+          export AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION
+          export AWS_REGION=$AWS_DEFAULT_REGION
+          env
+          eval $(aws ecr get-login-password)
+          docker pull $TARGET_IMAGE
